# executorch_moe

examples/models/deepseek_vl2/c_moe_exe/common/: moe_core.h
examples/models/deepseek_vl2/c_moe_exe/exe_moe/: CMakeLists.txt  moe_kernel.cpp
examples/models/deepseek_vl2/c_moe_exe/pyt_moe/: meta_kernels.py  moe.cpp  moe_wrapper.py  setup.py
examples/models/deepseek_vl2/c_moe_exe/test/: export_decoder_to_pte.py  run_pte.py  run_pte_portable.py
examples/models/deepseek_vl2/models/: configuration_deepseek.py
